@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-06-28T02:04:31Z",
-  "count_outdated" : 38,
-  "uniques_outdated" : 9,
-  "count" : 39,
-  "uniques" : 10,
+  "timestamp" : "2022-07-22T16:36:15Z",
+  "count_outdated" : 39,
+  "uniques_outdated" : 10,
+  "count" : 41,
+  "uniques" : 11,
   "views" : [
     {
-      "timestamp": "2022-06-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "timestamp": "2022-07-22T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
